--- a/modules/payment/public/payment.ejs
+++ b/modules/payment/public/payment.ejs
@@ -82,13 +82,14 @@
             </div>
             <div id="Barion" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    // Tesztkártyák 4444 8888 8888 5559, 2/20, 200 | 4444 8888 8888 4446
+                    ##&en Barion is an offsite payment method, it will redirect to the barion website to enter creditcard details. ##&hu A barion offsite fizetési megoldásával oldalára irányítva fizethet bankártyával vagy barion tálcával ##
                     <img class="pull-right" src="/images/barion-card-payment-mark-2017.svg"></img><br>
                     <button id="barion-submit" class="btn btn-primary">##&en Payment via creditcard or with a Barion wallet. ##&hu Fizetés bankkártyával vagy a Barion tálcával. ##</button>
                     <script>
                         var barion_submit = document.querySelector('#barion-submit');
-
                         barion_submit.addEventListener('click', function() {
+                            $('#barion-submit').remove();
+                            $('#checkout-message').html('<h2>##&en Please wait ##&hu kérem várjon ##</h2><p>##&en redirecting ##&hu átirányítás ##</p>');
                             $.ajax({
                                 type: 'POST',
                                 url: '/barion-payment',
@@ -119,7 +120,6 @@
                     <br>
                     <button id="braintree-submit" class="btn btn-primary">##&en Payment via creditcard. ##&hu Fizetés bankkártyával ##</button>
                     <script>
-
                         var token = '<%= braintree_token %>';
 
                         var braintree_submit = document.querySelector('#braintree-submit');
@@ -225,6 +225,8 @@
                                                     } else {
                                                         // Remove the accordion
                                                         $('#payment-accordion').remove();
+                                                        $('#braintree-submit').remove();
+                                                        window.location.hash = '#invoices';
                                                     }
                                                 });
                                             } else {
