--- a/modules/payment_simplepay/public/simplepay.ejs
+++ b/modules/payment_simplepay/public/simplepay.ejs
@@ -1,5 +1,5 @@
 <div class="container content-box-large">
-    <h1>##&en PAYMENT ##&hu FIZETÉS ##</h1>
+    <h1>##&en PAYMENT-SIMPLEPAY ##&hu FIZETÉS-SIMPLEPAY ##</h1>
     <div class="panel-heading">
         <div class="panel-title"></div>
     </div>
