--- a/modules/admin/public/admin.ejs
+++ b/modules/admin/public/admin.ejs
@@ -52,10 +52,10 @@
         <div class="alertServiceAlert alert-{{alert.type}} animated {{alert.anim}}" ng-repeat="alert in alerts track by $index" type="alert.type">{{ alert.msg }}</div>
     </div>
 
-    <div ng-cloak ng-include="'/navigation.html'">
+    <div ng-cloak ng-include="'/navigation.html'" class="navigation">
     </div>
 
-    <div ng-cloak ng-include="pageuri" class="animated fadeIn">
+    <div ng-cloak ng-include="pageuri" class="animated fadeIn {{page}}">
     </div>
 </body>
 
