--- a/modules/frontend/public/index.ejs
+++ b/modules/frontend/public/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title><%= HOSTNAME %> <%= lang %></title>
+    <title><%= HOSTNAME %></title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
